--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-phone-number-input": "^3.4.8",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.1",
