--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gongo-frontier",
   "version": "0.1.0",
-  "homepage": " https://vn425282.github.io/gongo",
+  "homepage": "https://vn425282.github.io/gongo/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
